@@ -4,7 +4,7 @@ cd `dirname $0`
 cd ..
 HOME=`pwd`
 export STREAMIS_HOME=$HOME
-
+export STREAMIS_CONF=${STREAMIS_CONF_DIR:-"${STREAMIS_HOME}/conf"}
 export STREAMIS_PID=$HOME/bin/linkis.pid
 
 if [[ -f "${STREAMIS_PID}" ]]; then
@@ -17,9 +17,9 @@ fi
 
 export STREAMIS_LOG_PATH=$HOME/logs
 export STREAMIS_HEAP_SIZE="1G"
-export STREAMIS_JAVA_OPTS="-Xms$STREAMIS_HEAP_SIZE -Xmx$STREAMIS_HEAP_SIZE -XX:+UseG1GC -XX:MaxPermSize=500m -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=11729"
+export STREAMIS_JAVA_OPTS="-Xms$STREAMIS_HEAP_SIZE -Xmx$STREAMIS_HEAP_SIZE -XX:+UseG1GC -XX:MaxPermSize=500m -Xloggc:$STREAMIS_LOG_DIR/streamis-gc.log -XX:+PrintGCDateStamps "
 
-nohup java $STREAMIS_JAVA_OPTS -cp $HOME/conf:$HOME/lib/* org.apache.linkis.DataWorkCloudApplication 2>&1 > $STREAMIS_LOG_PATH/streamis.out &
+nohup java $STREAMIS_JAVA_OPTS -cp $STREAMIS_CONF:$HOME/lib/* org.apache.linkis.DataWorkCloudApplication 2>&1 > $STREAMIS_LOG_PATH/streamis.out &
 pid=$!
 if [[ -z "${pid}" ]]; then
     echo "Streamis Server start failed!"
